cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_80.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/cfb64enc.c:54: error: DEAD_STORE
  The value written to &iv (type unsigned char*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/cfb64enc.c:54:17: Write of unused value
52.                   c2l(iv, v0);
53.                   ti[0] = v0;
54.                   c2l(iv, v1);
                      ^
55.                   ti[1] = v1;
56.                   DES_encrypt1(ti, schedule, DES_ENCRYPT);
